修改页面样式

--- a/blog/templates/layout/banner.html
+++ b/blog/templates/layout/banner.html
@@ -23,5 +23,5 @@
     </div>
  </div>
 <script>
-    $('.bg-cover').css('background-image', 'url({{ BG_COVER }})');
+    {#$('.bg-cover').css('background-image', 'url({{ BG_COVER }})');#}
 </script>
