--- a/blog/static/css/my.css
+++ b/blog/static/css/my.css
@@ -1,7 +1,7 @@
 /* Here is your custom css styles. */
 
 /* hexo-filter-github-emojis */
-.github-emoji{
+.github-emoji {
     height: 2em;
     width: 2em;
     display: inline-block !important;
@@ -9,9 +9,11 @@
     margin: 0 3px !important;
     padding: 0;
 }
-.github-emoji:hover{
+
+.github-emoji:hover {
     animation: emoji-face 5s infinite ease-in-out;
 }
+
 @keyframes emoji-face {
     2% {
         transform: translate(0, 1.5px) rotate(1.5deg);
@@ -55,4 +57,11 @@
     28% {
         transform: translate(0, 0.5px) rotate(1.5deg);
     }
+}
+
+/*首页背景*/
+.index-back {
+    background: #56CCF2; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
