--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block banner %}
     <div class="carousel carousel-slider center index-cover" data-indicators="true" style="margin-top: -64px;">
-        <div class="carousel-item red white-text bg-cover about-cover">
+        <div class="carousel-item index-back white-text bg-cover about-cover">
             <div class="container">
                 {% include 'layout/banner.html' %}
                 <div class="cover-btns">
