修改页面样式

--- a/blog/static/css/matery.css
+++ b/blog/static/css/matery.css
@@ -253,27 +253,9 @@ mark {
     background: #56CCF2; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    /*filter: blur(1px);*/
 }
 
-.tag-color {
-    background-image: linear-gradient(to right, #ed4264 0%, #ffedbc 100%);
-    /*background-image: linear-gradient(to right, #7693ee 0%, #9baeeb 100%);*/
-}
-
-.left-color {
-    background-image: linear-gradient(to right, #ed4264 0%, #ffedbc 100%);
-    /*background-image: linear-gradient(to right, #de5347 0%, #de776e 100%);*/
-}
-
-.right-color {
-    background-image: linear-gradient(to right, #ed4264 0%, #ffedbc 100%);
-    /*background-image: linear-gradient(to right, #de5347 0%, #7693ee 100%);*/
-}
-
-.text-color {
-    color: #ed4264 !important;
-    /*color: #0f9d58 !important;*/
-}
 
 .white-color {
     color: #fff;
