修改页面样式

--- a/blog/templates/article_tag.html
+++ b/blog/templates/article_tag.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block title%}标签 | {% endblock %}
 {% block banner %}
-    <div class="bg-cover pd-header about-cover">
+    <div class="bg-cover index-back pd-header about-cover">
     <div class="container">
         {% include 'layout/banner.html' %}
     </div>
