--- a/blog/static/css/matery.css
+++ b/blog/static/css/matery.css
@@ -431,6 +431,7 @@ header .go-back i {
 
 /* 背景图效果. */
 .bg-cover {
+    /*margin: 0;*/
     position: relative;
     display: flex;
     align-items: center;
@@ -457,13 +458,13 @@ header .go-back i {
 }
 
 .bg-cover:before, .bg-cover:after {
+    display: block;
     position: absolute;
     z-index: 1;
     width: 100%;
     height: 100%;
-    display: block;
     left: 0;
-    top: 0;
+    top: 64px;
     content: "";
 }
 
