--- a/blog/static/css/my.css
+++ b/blog/static/css/my.css
@@ -65,3 +65,13 @@
     background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+/*修复手机页面侧边栏箭头问题*/
+.m-nav-item a i {
+    height: 50px;
+    line-height: 50px;
+}
+.title-name-with{
+    min-width: 220px;
+}
+
