--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -2,7 +2,7 @@
 {% load custom_tag %}
 {% block title %}关于 | {% endblock %}
 {% block banner %}
-	<div class="bg-cover pd-header about-cover">
+	<div class="bg-cover index-back pd-header about-cover">
 		<div class="container">
 			{% include 'layout/banner.html' %}
 		</div>
