--- a/blog/templates/article_category.html
+++ b/blog/templates/article_category.html
@@ -3,7 +3,7 @@
 {% load custom_tag %}
 {% block title %}分类 | {% endblock %}
 {% block banner%}
-<div class="bg-cover pd-header about-cover">
+<div class="bg-cover index-back pd-header about-cover">
     <div class="container">
         {% include 'layout/banner.html' %}
     </div>
