--- a/blog/templates/layout/header.html
+++ b/blog/templates/layout/header.html
@@ -2,7 +2,7 @@
 	<nav id="headNav" class="bg-color nav-transparent">
 		<div id="navContainer" class="nav-wrapper head-container">
 			<div class="brand-logo">
-				<a href="/" class="waves-effect waves-light">
+				<a href="/" class="waves-effect title-name-with waves-light">
 					<img src="{{ LOGO }}" class="logo-img" alt="LOGO">
 					<span class="logo-span"> {{ SITE_NAME }}</span>
 				</a>
@@ -48,7 +48,7 @@
 						</li>
 						<li>
 
-							<a href="../article_tag/1">
+							<a href="../article_tag/">
 								<i class="fas fa-file-contract" style="margin-top: -20px; zoom: 0.6;"></i>
 								<span>归档</span>
 							</a>
@@ -104,10 +104,9 @@
 						<a href="javascript:;">
 							<i class="fa-fw fas fa-list"></i>
 							整理
-							<span class="m-icon"><i class="fas fa-chevron-right"></i></span>
+							<span  class="m-icon"><i class="fas fa-chevron-right"></i></span>
 						</a>
 						<ul
-{#								style="background:  ;"#}
 						>
 							<li>
 								<a href="{% url 'category_tag' %} " style="margin-left:50px" ;>
