--- a/blog/templates/member.html
+++ b/blog/templates/member.html
@@ -193,7 +193,7 @@
 </style>
 {% endblock %}
 {% block banner%}
-<div class="bg-cover pd-header about-cover">
+<div class="bg-cover index-back pd-header about-cover">
     <div class="container">
         {% include 'layout/banner.html' %}
     </div>
