--- a/blog/templates/layout/header.html
+++ b/blog/templates/layout/header.html
@@ -115,7 +115,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="../article_tag/1 " style="margin-left:50px" ;>
+								<a href="../article_tag " style="margin-left:50px" ;>
 									<i class="fa fas fa-file-contract" style="position: absolute;left:28px"></i>
 									<span>归档</span>
 								</a>
