--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -80,7 +80,7 @@
     <!--所有文章-->
     <article id="articles" class="container articles">
         <div class="row article-row">
-            {% for article in all_articles %}
+            {% for article in all_articles.object_list %}
                 <div class="article col s12 m6 l4" data-aos="zoom-in">
                     <div class="card">
                         <a href="{% url 'article_detail' article.id %}">
