更新博客页面内容  剩余文章全文搜索

--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -362,9 +362,9 @@
 									</a>
 									<div class="info-title">
 										<a href="#"
-										   target="_blank">MSI-Z390暗黑板-I7-9700KF-RX560D</a>
+										   target="_blank">MSI-Z390暗黑板-I7-9700K-RX560D</a>
 									</div>
-									<div class="info-desc">我的台式机的黑苹果99%完美的Clover驱动配置</div>
+									<div class="info-desc">我的台式机的黑苹果99%完美的OC驱动配置</div>
 								</div>
 							</div>
 
