--- a/blog/templates/layout/banner.html
+++ b/blog/templates/layout/banner.html
@@ -7,7 +7,7 @@
             </div>
             <div class="description center-align">
                <span id="subtitle"></span>
-                <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+                <script src="{% static '/js/typed.js' %}"></script>
                 <script>
                     var typed = new Typed("#subtitle", {
                         strings: ['{{ DYNAMIC_SLOGAN }}'],
