--- a/blog/templates/layout/base.html
+++ b/blog/templates/layout/base.html
@@ -2,27 +2,27 @@
 <html lang="zh-CN">
 {% load static %}
 <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="{{ KEYWORDS }}">
-    <meta name="description" content="{{DESC}}">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="renderer" content="webkit|ie-stand|ie-comp">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>{% block title %}{% endblock %}{{ SITE_NAME }}</title>
-    <link rel="icon" type="image/png" href="{{ LOGO }}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/all.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/materialize.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/aos.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/animate.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/lightgallery.min.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/matery.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static '/css/my.css' %}">
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    {% block css %}{% endblock %}
+	<meta charset="utf-8">
+	<meta name="keywords" content="{{ KEYWORDS }}">
+	<meta name="description" content="{{ DESC }}">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="renderer" content="webkit|ie-stand|ie-comp">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="format-detection" content="telephone=no">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<title>{% block title %}{% endblock %}{{ SITE_NAME }}</title>
+	<link rel="icon" type="image/png" href="{{ LOGO }}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/all.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/materialize.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/aos.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/animate.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/lightgallery.min.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/matery.css' %}">
+	<link rel="stylesheet" type="text/css" href="{% static '/css/my.css' %}">
+	<script src="{% static 'js/jquery.min.js' %}"></script>
+	{% block css %}{% endblock %}
 </head>
 
 <body>
@@ -87,9 +87,9 @@
 {% block contents %}{% endblock %}
 
 
-  <!-- 翻页按钮 -->
-    {% block pagination %}
-    {% endblock %}
+<!-- 翻页按钮 -->
+{% block pagination %}
+{% endblock %}
 
 <!-- 页脚 -->
 {% include 'layout/footer.html' %}
@@ -100,14 +100,14 @@
 
 <!-- 搜索遮罩框 -->
 <div id="searchModal" class="modal">
-    <div class="modal-content">
-        <div class="search-header">
-            <span class="title"><i class="fas fa-search"></i>&nbsp;&nbsp;搜索</span>
-            <input type="search" id="searchInput" name="s" placeholder="请输入搜索的关键字"
-                   class="search-input">
-        </div>
-        <div id="searchResult"></div>
-    </div>
+	<div class="modal-content">
+		<div class="search-header">
+			<span class="title"><i class="fas fa-search"></i>&nbsp;&nbsp;搜索</span>
+			<input type="search" id="searchInput" name="s" placeholder="请输入搜索的关键字"
+			       class="search-input">
+		</div>
+		<div id="searchResult"></div>
+	</div>
 </div>
 <script src="{% static 'js/search.js' %}"></script>
 <script type="text/javascript">
@@ -118,9 +118,9 @@
 
 <!-- 回到顶部按钮 -->
 <div id="backTop" class="top-scroll">
-    <a class="btn-floating btn-large waves-effect waves-light" href="#!">
-        <i class="fas fa-arrow-up"></i>
-    </a>
+	<a class="btn-floating btn-large waves-effect waves-light" href="#!">
+		<i class="fas fa-arrow-up"></i>
+	</a>
 </div>
 
 <script src="{% static 'js/materialize.min.js' %}"></script>
@@ -135,7 +135,8 @@
 <script src="{% static 'js/prism.js' %}"></script>
 <!--背景特效-->
 {#<script type="text/javascript" color="0,0,255" pointColor="0,0,255" opacity='0.7' zIndex="-1" count="99" src="{% static 'js/canvas-nest.js' %}"></script>#}
-<script type="text/javascript" size="150" alpha='0.6' zIndex="-1" src="{% static 'js/ribbon.min.js' %}" async="async"></script>
+<script type="text/javascript" size="150" alpha='0.6' zIndex="-1" src="{% static 'js/ribbon.min.js' %}"
+        async="async"></script>
 <script type="text/javascript" src="{% static 'js/ribbon-dynamic.js' %}" async="async"></script>
 {% block js %}{% endblock %}
 </body>
