新增搜索文章 及显示问题

--- a/blog/templates/article_detail.html
+++ b/blog/templates/article_detail.html
@@ -189,7 +189,7 @@
                 </i>
             </span>
 									<span class="reprint-info">
-                <a href="{% url 'article_detail' article.id %}">{% url 'article_detail' article.id %}</a>
+                <a href="{% url 'article_detail' article.id %}">http://super-zero.top{% url 'article_detail' article.id %}</a>
             </span>
 								</div>
 								<div class="reprint__notice">
